--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,9 +1,11 @@
 <header>
 	<nav>
-		<a href="/">
-			<h1>ABC Bank</h1>
-		</a>
-		<h2>Customer Management</h2>
+		<div>
+			<a href="/">
+				<h1>ABC Bank</h1>
+			</a>
+			<h2>Customer Management</h2>
+		</div>
 		<ul>
 			<li><a href="/customers">Check if customer exists</a></li>
 			<li><a href="/customers/new">Add new customer</a></li>
