button + form styling

--- a/views/customers/index.ejs
+++ b/views/customers/index.ejs
@@ -10,7 +10,9 @@
 		name="customerCheck"
 		value="<%= searchOptions.customerCheck %>"
 	/>
-	<input type="submit" value="Search" />
+	<div class="buttons-left">
+		<input class="button-primary" type="submit" value="Search" />
+	</div>
 </form>
 
 <!-- Send info to new customer-creation -->
@@ -21,7 +23,9 @@
 		name="pno"
 		value="<%= searchOptions.customerCheck %>"
 	/>
-	<input type="submit" value="Create new customer" />
+	<div class="buttons-left">
+		<input type="submit" value="Create new customer" />
+	</div>
 </form>
 <% } %>
 
