--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,9 +7,9 @@
 			<h2>Customer Management</h2>
 		</div>
 		<ul>
-			<li><a href="/customers">Check if customer exists</a></li>
+			<li><a href="/customers">Find customer</a></li>
 			<li><a href="/customers/new">Add new customer</a></li>
-			<li><a href="/customers/update">Update existing customer</a></li>
+			<li><a href="/customers/update">Update customer details</a></li>
 			<li><a href="/customers/delete">Delete customer</a></li>
 		</ul>
 	</nav>
