--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -14,6 +14,7 @@ footer {
 
 #errorMessage {
     color: rgb(211, 0, 0);
+    text-align: center;
 }
 
 img {
@@ -58,10 +59,50 @@ nav ul {
 main {
     display: flex;
     flex-direction: column;
-    width: 50vw;
-    align-items: center;
+    width: 30vw;
+    /* align-items: center; */
+    align-items: auto;
 }
 
 main h2 {
     text-align: center;
+}
+
+/* Forms */
+form {
+    margin-bottom: 0;
+}
+
+input[type="text"],
+input[type="number"] {
+    width: 100%;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type=number] {
+    -moz-appearance: textfield;
+}
+
+input[type="submit"] {
+    margin-left: 2px;
+}
+
+.button-primary,
+input[type="reset"] {
+    border: 1px solid white;
+}
+
+input[type="reset"] {
+    background-color: rgb(177, 50, 0);
+    color: white;
+}
+
+.buttons-left {
+    display: flex;
+    justify-content: flex-end;
 }
