--- a/views/customers/new.ejs
+++ b/views/customers/new.ejs
@@ -3,6 +3,8 @@
 	<%- include('_form_fields') %>
 
 	<br />
-	<input type="reset" value="Cancel" />
-	<input type="submit" value="Create customer" />
+	<div class="buttons-left">
+		<input type="reset" value="Reset form" />
+		<input class="button-primary" type="submit" value="Create customer" />
+	</div>
 </form>
