added customer_id to schema + xtra form validation

--- a/views/customers/_form_fields.ejs
+++ b/views/customers/_form_fields.ejs
@@ -4,19 +4,34 @@
 	name="pno"
 	id="pno"
 	value="<%= customer.personal_number %>"
+	required
+	autofocus
 />
 
 <label for="fName">First name</label>
-<input type="text" name="fName" id="fName" value="<%= customer.first_name %>" />
+<input
+	type="text"
+	name="fName"
+	id="fName"
+	value="<%= customer.first_name %>"
+	required
+/>
 
 <label for="lName">Last name</label>
-<input type="text" name="lName" id="lName" value="<%= customer.last_name %>" />
+<input
+	type="text"
+	name="lName"
+	id="lName"
+	value="<%= customer.last_name %>"
+	required
+/>
 
 <label for="city">City</label>
 <input type="text" name="city" id="city" value="<%= customer.city %>" />
 
 <label for="acctType">Account type</label>
-<select name="acctType" id="acctType">
+<select name="acctType" id="acctType" required>
+	<option disabled selected hidden>Select account type</option>
 	<option value="60">Current account</option>
 	<option value="50">Deposit account</option>
 	<option value="40">Savings account</option>
