--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -20,6 +20,7 @@
 			href="/stylesheets/skeleton.css"
 		/>
 		<link rel="stylesheet" type="text/css" href="/stylesheets/styles.css" />
+		<link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
 		<title>ABC Bank | Customer Management</title>
 	</head>
 
