--- a/views/customers/new.ejs
+++ b/views/customers/new.ejs
@@ -1,6 +1,6 @@
 <h2>Create new customer</h2>
 <form action="/customers" method="POST">
-	<%- include('_form_fields') %>
+	<%- include('../partials/_form_fields') %>
 
 	<br />
 	<div class="buttons-left">
