--- a/views/customers/update.ejs
+++ b/views/customers/update.ejs
@@ -1,1 +1,9 @@
 <h2>Update customer details</h2>
+
+<form action="/customers/<%= customer.personal_number %>?_method=PUT">
+	<%- include('../partials/_form_fields') %>
+	<div class="buttons-left">
+		<a class="button" href="/">Cancel</a>
+		<input class="button-primary" type="submit" value="Update" />
+	</div>
+</form>
