--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -108,3 +108,54 @@ input[type="reset"],
     display: flex;
     justify-content: flex-end;
 }
+
+
+/* Customer display card */
+.customer-card {
+    background-color: gainsboro;
+    width: 100%;
+    padding: 2em 3em;
+    border-radius: 10px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.customer-card p {
+    margin-bottom: 1em;
+}
+
+.ids {
+    width: 40%;
+    opacity: 60%;
+}
+
+.ids p {
+    margin-bottom: 0.4em;
+}
+
+.name {
+    text-align: right;
+}
+
+.details,
+.ids {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.details p:nth-of-type(even) {
+    color: #33c3f0;
+    text-align: right;
+    font-size: 1.8rem;
+}
+
+.customer-since {
+    text-align: right;
+    opacity: 60%;
+}
+
+p.customer-since {
+    margin-bottom: 0;
+}
