--- a/views/customers/delete.ejs
+++ b/views/customers/delete.ejs
@@ -9,7 +9,30 @@
 
 <% if (customers) { customers.forEach(customer=> { %>
 
-<div><%= customer %></div>
+<div class="customer-card">
+	<div class="ids">
+		<p>PNO</p>
+		<p><%= customer.pno %></p>
+		<p>CID</p>
+		<p><%= customer.cid %></p>
+	</div>
+
+	<h3 class="name"><%= customer.fullName %></h3>
+	<div class="details">
+		<p>Account no.</p>
+		<p><%= customer.accNo %></p>
+		<p>Account type</p>
+		<p><%= customer.accountType %></p>
+		<p>City</p>
+		<p><%= customer.city %></p>
+		<p>Date of birth</p>
+		<p><%= customer.birthdate %></p>
+	</div>
+
+	<p class="customer-since">
+		Customer since <span><%= customer.sinceDate %> </span>
+	</p>
+</div>
 <form
 	action="/customers/<%= customer.personal_number %>?_method=DELETE"
 	method="POST"
