added success message

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -32,6 +32,9 @@
 			<p id="errorMessage">
 				<%- include('../partials/errorMessage.ejs') %>
 			</p>
+			<p id="successMessage">
+				<%- include('../partials/successMessage.ejs') %>
+			</p>
 		</main>
 	</body>
 </html>
