--- a/views/customers/new.ejs
+++ b/views/customers/new.ejs
@@ -1,5 +1,5 @@
 <h2>Create new customer</h2>
-<form action="/customers" method="POST">
+<form action="/customers/new" method="POST">
 	<%- include('../partials/_form_fields') %>
 
 	<br />
