--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -46,7 +46,7 @@ a {
 
 nav h1,
 nav h2,
-ul {
+nav ul {
     margin-bottom: 0;
 }
 
@@ -71,12 +71,9 @@ nav ul {
 main {
     display: flex;
     flex-direction: column;
-    width: 35vw;
+    width: 700px;
+    max-width: 90vw;
     align-items: auto;
-}
-
-main h2 {
-    text-align: center;
 }
 
 /* Forms */
@@ -176,4 +173,74 @@ input[type="reset"],
 p.customer-since {
     margin-bottom: 0;
     margin-top: .8em;
+}
+
+@media only screen and (max-width: 1360px) {
+
+    /* Navigation */
+    nav ul {
+        flex-direction: column;
+        text-align: right;
+    }
+}
+
+@media only screen and (max-width: 710px) {
+
+    /* Customer display card */
+    .ids {
+        width: 60%;
+    }
+}
+
+@media only screen and (max-width: 530px) {
+
+    /* Navigation */
+    nav {
+        flex-direction: column;
+    }
+
+    nav div {
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
+    nav div h1,
+    nav div h2 {
+        font-size: 2.5rem;
+    }
+
+    nav ul {
+        width: 100%;
+        text-align: center;
+    }
+
+    /* Customer display card */
+    .ids {
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+
+    /* Customer display card */
+    .name {
+        text-align: center;
+    }
+
+    .details {
+        grid-template-columns: 1fr;
+    }
+
+    .details p {
+        margin-bottom: .2em;
+    }
+
+    .details p:nth-of-type(even) {
+        text-align: left;
+        margin-bottom: .8em;
+    }
+
+    .customer-since {
+        text-align: center;
+    }
 }
