--- a/public/stylesheets/skeleton.css
+++ b/public/stylesheets/skeleton.css
@@ -1,3 +1,33 @@
+/*
+* Skeleton V2.0.4
+* Copyright 2014, Dave Gamache
+* www.getskeleton.com
+* Free to use under the MIT license.
+* http://www.opensource.org/licenses/mit-license.php
+* 12/29/2014
+*/
+
+
+/* Table of contents
+––––––––––––––––––––––––––––––––––––––––––––––––––
+- Grid
+- Base Styles
+- Typography
+- Links
+- Buttons
+- Forms
+- Lists
+- Code
+- Tables
+- Spacing
+- Utilities
+- Clearing
+- Media Queries
+*/
+
+
+/* Grid
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
 .container {
   position: relative;
   width: 100%;
@@ -14,6 +44,7 @@
   box-sizing: border-box;
 }
 
+/* For devices larger than 400px */
 @media (min-width: 400px) {
   .container {
     width: 85%;
@@ -21,6 +52,7 @@
   }
 }
 
+/* For devices larger than 550px */
 @media (min-width: 550px) {
   .container {
     width: 80%;
@@ -98,6 +130,7 @@
     width: 48%;
   }
 
+  /* Offsets */
   .offset-by-one.column,
   .offset-by-one.columns {
     margin-left: 8.66666666667%;
@@ -170,18 +203,28 @@
 
 }
 
+
+/* Base Styles
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+/* NOTE
+html is set to 62.5% so that all the REM measurements throughout Skeleton
+are based on 10px sizing. So basically 1.5rem = 15px :) */
 html {
   font-size: 62.5%;
 }
 
 body {
   font-size: 1.5em;
+  /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
   font-weight: 400;
   font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #222;
 }
 
+
+/* Typography
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
 h1,
 h2,
 h3,
@@ -229,6 +272,7 @@ h6 {
   letter-spacing: 0;
 }
 
+/* Larger than phablet */
 @media (min-width: 550px) {
   h1 {
     font-size: 5.0rem;
@@ -259,6 +303,9 @@ p {
   margin-top: 0;
 }
 
+
+/* Links
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
 a {
   color: #1EAEDB;
 }
@@ -268,6 +315,8 @@ a:hover {
 }
 
 
+/* Buttons
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
 .button,
 button,
 input[type="submit"],
@@ -332,6 +381,9 @@ input[type="button"].button-primary:focus {
   border-color: #1EAEDB;
 }
 
+
+/* Forms
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
 input[type="email"],
 input[type="number"],
 input[type="search"],
@@ -343,6 +395,7 @@ textarea,
 select {
   height: 38px;
   padding: 6px 10px;
+  /* The 6px vertically centers text on FF, ignored by Webkit */
   background-color: #fff;
   border: 1px solid #D1D1D1;
   border-radius: 4px;
@@ -350,6 +403,7 @@ select {
   box-sizing: border-box;
 }
 
+/* Removes awkward default styles on some inputs for iOS */
 input[type="email"],
 input[type="number"],
 input[type="search"],
@@ -405,6 +459,9 @@ label>.label-body {
   font-weight: normal;
 }
 
+
+/* Lists
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
 ul {
   list-style: circle inside;
 }
@@ -431,6 +488,9 @@ li {
   margin-bottom: 1rem;
 }
 
+
+/* Code
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
 code {
   padding: .2rem .5rem;
   margin: 0 .2rem;
@@ -447,6 +507,9 @@ pre>code {
   white-space: pre;
 }
 
+
+/* Tables
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
 th,
 td {
   padding: 12px 15px;
@@ -464,6 +527,9 @@ td:last-child {
   padding-right: 0;
 }
 
+
+/* Spacing
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
 button,
 .button {
   margin-bottom: 1rem;
@@ -488,6 +554,9 @@ form {
   margin-bottom: 2.5rem;
 }
 
+
+/* Utilities
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
 .u-full-width {
   width: 100%;
   box-sizing: border-box;
@@ -506,6 +575,9 @@ form {
   float: left;
 }
 
+
+/* Misc
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
 hr {
   margin-top: 3rem;
   margin-bottom: 3.5rem;
@@ -513,6 +585,11 @@ hr {
   border-top: 1px solid #E1E1E1;
 }
 
+
+/* Clearing
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+/* Self Clearing Goodness */
 .container:after,
 .row:after,
 .u-cf {
@@ -521,12 +598,28 @@ hr {
   clear: both;
 }
 
+
+/* Media Queries
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+/*
+Note: The best way to structure the use of media queries is to create the queries
+near the relevant code. For example, if you wanted to change the styles for buttons
+on small devices, paste the mobile query code up in the buttons section and style it
+there.
+*/
+
+
+/* Larger than mobile */
 @media (min-width: 400px) {}
 
+/* Larger than phablet (also point when grid becomes active) */
 @media (min-width: 550px) {}
 
+/* Larger than tablet */
 @media (min-width: 750px) {}
 
+/* Larger than desktop */
 @media (min-width: 1000px) {}
 
+/* Larger than Desktop HD */
 @media (min-width: 1200px) {}
