--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1,12 +1,21 @@
 /* General */
 body {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
 
 body * {
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
 
@@ -31,6 +40,8 @@ footer {
 img {
     margin-top: 3em;
     max-width: 75%;
+    -ms-flex-item-align: center;
+    -ms-grid-row-align: center;
     align-self: center;
 }
 
@@ -51,7 +62,11 @@ nav ul {
 }
 
 nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
     padding: 0 2em;
 }
@@ -61,18 +76,30 @@ nav ul li {
 }
 
 nav ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     width: 50%;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
+    -ms-flex-item-align: end;
     align-self: flex-end;
 }
 
 /* Main */
 main {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
     width: 700px;
     max-width: 90vw;
+    -webkit-box-align: auto;
+    -ms-flex-align: auto;
     align-items: auto;
 }
 
@@ -118,14 +145,23 @@ input[type="reset"]:hover,
     background-color: rgb(145, 41, 0);
     border: 1px solid rgb(145, 41, 0);
     color: white;
+}
 
+input[type="reset"]:focus,
+#delete-button:focus {
+    background-color: rgb(145, 41, 0);
+    border: 1px solid rgb(145, 41, 0);
+    color: white;
 }
 
 .buttons-left {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: end;
+    -ms-flex-pack: end;
     justify-content: flex-end;
 }
-
 
 /* Customer display card */
 .customer-card {
@@ -133,9 +169,17 @@ input[type="reset"]:hover,
     width: 100%;
     padding: 2em 3em;
     border-radius: 10px;
+    -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
     margin-bottom: 1em;
 }
@@ -159,6 +203,7 @@ input[type="reset"]:hover,
 
 .details,
 .ids {
+    display: -ms-grid;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     margin-bottom: .8em;
@@ -188,6 +233,9 @@ p.customer-since {
 
     /* Navigation */
     nav ul {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
         flex-direction: column;
         text-align: right;
     }
@@ -205,6 +253,9 @@ p.customer-since {
 
     /* Navigation */
     nav {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
         flex-direction: column;
     }
 
@@ -246,7 +297,9 @@ p.customer-since {
     }
 
     .details {
+        -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
+        text-align: center;
     }
 
     .details p {
@@ -254,7 +307,7 @@ p.customer-since {
     }
 
     .details p:nth-of-type(even) {
-        text-align: left;
+        text-align: center;
         margin-bottom: .8em;
     }
 
